# OhmFlux

./: .gitmodules  CMakeLists.txt  Makefile  OhmFlux.kdev4  README.md  README_BUILD_WINDOWS.md  build.gradle.template  ohmFlux.kdev4
Amana/: README.md
Amana/src/: amanaGame.cpp  amanaGame.h  globalResources.cpp  globalResources.h  globals.h  main.cpp
AudioTestBed/: CMakeLists.txt
AudioTestBed/res/: createIcons.sh
AudioTestBed/src/: main.cpp
ElfTest/: CMakeLists.txt  README.md  dbg.sh
ElfTest/assets/: empty.cs  flyingText.cs  flyingText.elf  gridtest.cs  gridtest.elf  invadergame.cs  invadergame.elf  main.cs  main.elf  memtest.cs  memtest.elf  pinball.cs  pinball.elf  pong.cs  pong.elf  pong_withNewObjects.cs  pong_withNewObjects.elf  skel.elf  template.cs  template.elf  template_named.cs  template_named.elf  test.cs  test.elf  tools.elf
ElfTest/res/: createIcons.sh
ElfTest/src/: appMain.cpp  appMain.h  main.cpp  myPlatformProcess.cc  skel.c  torqueConfig.h
FishTankDemo/src/: GuiFishLabel.h  globals.h  main.cpp  main.h  myFish.h
FluxEditor/: MelodicDefault 1.fmi  README.md  dummy.fmi  dummy.fms
FluxEditor/src/: FluxComposer.h  editorGui.cpp  editorGui.h  fileDialog.h  fluxComposer.h  fluxEditorGlobals.h  fluxEditorMain.h  fluxEditorOplController.h  fluxFMEditor.h  fluxSfxEditor.h  fluxSfxEditorStereo.h  main.cpp
HTSequencer/src/: bankGui.cpp  dspGui.cpp  fancyOverlays.cpp  keyboardGui.cpp  main.cpp  ordersGui.cpp  sequencerGlobals.h  sequencerGui.cpp  sequencerGui.h  sequencerMain.h  songFunc.cpp  songGui.cpp  todo.txt
ImguiTest/: fluxSfxEditor.h
ImguiTest/src/: FluxGuiTest.cpp  FluxGuiTest.h  fluxGuiGlue.h  main.cpp
IronTuner/: README.md
IronTuner/docu/: ADV_BLA.md  ANDROID_BACKGROUND.md  TODO.md
IronTuner/res/: build.gradle  gradle.properties
IronTuner/src/: AppSettings.h  AudioHandler.cpp  AudioHandler.h  BackGroundEffects.h  Page.h  RadioBrowser.h  RadioWana.cpp  RadioWana.h  StationHandler.cpp  StationHandler.h  StreamHandler.cpp  WindowState.h  appGui.cpp  appGui.h  appMain.cpp  appMain.h  main.cpp
KorkTest/: CMakeLists.txt  README.md
KorkTest/assets/: flyingText.cs  gridtest.cs  invadergame.cs  main.cs  template.cs  test.cs  tools.cs
KorkTest/assets/texture/: back.psp
KorkTest/lib/korkscript/engine/platform/: types.h
KorkTest/lib/korkscript/tools/: build_ast_print.sh
KorkTest/lib/korkscript/torqueSim/platform/: basicPlatformProcess.cc
KorkTest/src/: appMain.cpp  appMain.h  main.cpp  myPlatformProcess.cc
KorkTest/src/Box2D/Dynamics/: b2Body.h  b2Fixture.cpp
KorkTest/src/audio/: AudioProfile.cpp  AudioProfile.h
KorkTest/src/b2b/: b2Joints.cc  b2Joints.h  b2Objects.cc  b2Objects.h  b2btest.cc  b2btest.h
KorkTest/src/consoleFunctions/: app.cpp  math.cpp
KorkTest/src/core/: ConsoleTypes.cpp  ConsoleTypes.h  GameCtrl.cpp  GameCtrl.h  Globals.h  Grid.cpp  Grid.h
KorkTest/src/math/: mMathFn.h  mMath_C.cc  math_ScriptBinding.cc
KorkTest/src/network/: tcpObject.cc
KorkTest/src/render/: Camera.h  Font.cpp  Font.h  Label.cpp  Label.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  tom2DCtrl.cpp  tom2DCtrl.h
KorkTest/src/scriptEditor/: scriptEditor.cpp
KorkTest/src/test/: testObj.cpp
KorkTest/src/totp/: base32.cc  hmac-sha1.cc  hmac-sha1.h  totp.cc
LuaTest/: CMakeLists.txt  README.md
LuaTest/assets/: loader.lua  main.lua  pong.lua  pong2.lua  skel.lua
LuaTest/src/: main.cpp  main_old.cpp
LuaTest/src/luabind/: luaBindings.cpp  luaBindings.h  luaFluxBindings.h  luaFluxMain.cpp  luaFluxMain.h  luaState.cpp  luaState.h
OhmFluxTracker/src/: bankGui.cpp  dspGui.cpp  fancyOverlays.cpp  keyboardGui.cpp  main.cpp  ohmfluxTrackerGui.h  ohmfluxTrackerMain.h  ordersGui.cpp  otGui.cpp  otGui.h  songFunc.cpp  songGui.cpp  todo.txt  trackerGui.cpp
OhmtalAxe/: README.md
OhmtalAxe/src/: appGlobals.h  appGui.cpp  appGui.h  appMain.h  main.cpp
OhmtalTracker/: README.md
OhmtalTracker/src/: dspGui.cpp  keyboardGui.cpp  otGui.cpp  otGui.h  songFunc.cpp  songGui.cpp
RadioWana/: README.md
RadioWana/src/: AudioHandler.cpp  AudioHandler.h  AudioRecorder.h  BackGroundEffects.h  RadioBrowser.cpp  RadioBrowser.h  RadioWana.cpp  RadioWana.h  StreamHandler.cpp  StreamHandler.h  StreamInfo.h  appMain.h  main.cpp
SoundStudio/src/: appGlobals.h  appGui.cpp  appGui.h  appMain.h  fluxSfxModule.h  fluxSfxStereoModule.h  main.cpp
TestBed/src/: main.cpp
TickTacToe/src/: main.cpp
Tools/: make_android_icons.py  make_android_icons_WebP.py  make_windows_icon.py
Tools/BitmapFont/: BitmapFont.lpi  BitmapFont.lpr  README.md  umain.lfm  umain.pas
Tools/BitmapFont/qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
deploy/emscripten/: shell_custom_web.html
docu/: FireTV_GamePadButtons.md  TODO.md
engine/dsp/: DSP.h  DSP_AnalogGlow.h  DSP_AutoWah.h  DSP_Bitcrusher.h  DSP_Chorus.h  DSP_ChromaticTuner.h  DSP_Delay.h  DSP_Distortion.h  DSP_DistortionBasic.h  DSP_Effect.h  DSP_EffectFactory.h  DSP_EffectsManager.h  DSP_Equalizer9Band.h  DSP_Equilizer.h  DSP_Equilizer9Band.h  DSP_Limiter.h  DSP_Math.h  DSP_Metal.h  DSP_NoiseGate.h  DSP_OverDrive.h  DSP_Reverb.h  DSP_RingModulator.h  DSP_SoundCardEmulation.h  DSP_SpectrumAnalyzer.h  DSP_ToneControl.h  DSP_Tremolo.h  DSP_VisualAnalyzer.h  DSP_VoiceModulator.h  DSP_Warmth.h  DSP_tools.h  README.md
engine/opl/: OplController.cpp  OplController.h
engine/opl3/: OPL3Controller.cpp  OPL3Controller.h  OPL3Instruments.h  OPL3Tests.h  TODO.md  fmImporter.h  opl3.h  opl3_base.h  opl3_bridge_fm.h  opl3_bridge_fms3.h  opl3_bridge_htseq.h  opl3_bridge_op2.h  opl3_bridge_sbi.h  opl3_bridge_soundflux.h  opl3_bridge_wopl.h  opl3_import_fm.h  patch_names.h  ymfmGlue.h
engine/sfx/: SFXGenerator.cpp  SFXGenerator.h  SFXGeneratorStereo.cpp  SFXGeneratorStereo.h
engine/source/: TODO.md  errorlog.cpp  errorlog.h  fluxAudioStream.cpp  fluxAudioStream.h  fluxBaseObject.h  fluxBitmapFont.cpp  fluxBitmapFont.h  fluxCamera.cpp  fluxCamera.h  fluxEmscripten.h  fluxGL.h  fluxGarbageCollection.h  fluxGlobals.cpp  fluxGlobals.h  fluxInput.h  fluxLight.h  fluxLightManager.h  fluxMain.cpp  (+30 more)
(+283 files in other folders)
